[gd_scene load_steps=16 format=3 uid="uid://ch7u3tvqcua3t"]

[ext_resource type="FontFile" uid="uid://dt1vo87tvxtki" path="res://assets/fonts/pixels.ttf" id="1_0qec4"]
[ext_resource type="Script" path="res://scripts/ui/settings_menu.gd" id="1_b7wwj"]
[ext_resource type="Texture2D" uid="uid://ry21qxehucf7" path="res://assets/art/run/animalrunright.png" id="2_qfvc3"]

[sub_resource type="StyleBoxLine" id="StyleBoxLine_rp7yr"]
color = Color(0.688753, 0.312196, 0.201869, 1)
grow_begin = 0.0
grow_end = 0.0
thickness = 4

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_rmkpr"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_x8c71"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_54e63"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_yxjap"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3cpu8"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0kre7"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ei7qu"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ql74l"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_d2qmv"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2pule"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_rvxff"]

[node name="SettingsMenu" type="MarginContainer"]
texture_filter = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_b7wwj")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 2
color = Color(0.12549, 0.576471, 0.258824, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_top = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Settings" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_0qec4")
text = "Settings"
horizontal_alignment = 1

[node name="SoundSetting" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_0qec4")
text = "Volume"
horizontal_alignment = 1

[node name="Volume" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_right = 15

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Volume"]
layout_mode = 2

[node name="Settings" type="Label" parent="MarginContainer/VBoxContainer/Volume/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_0qec4")
text = "0"
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/Volume/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 30
theme_override_constants/margin_right = 30

[node name="SoundSlider" type="HSlider" parent="MarginContainer/VBoxContainer/Volume/HBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_icons/grabber = ExtResource("2_qfvc3")
theme_override_icons/grabber_highlight = ExtResource("2_qfvc3")
theme_override_styles/slider = SubResource("StyleBoxLine_rp7yr")
value = 50.0

[node name="Settings2" type="Label" parent="MarginContainer/VBoxContainer/Volume/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_0qec4")
text = "100"
horizontal_alignment = 1

[node name="SoundSetting2" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_0qec4")
text = "50"
horizontal_alignment = 1

[node name="Back" type="Button" parent="MarginContainer/VBoxContainer"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_type_variation = &"FlatButton"
theme_override_colors/font_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(0.834614, 0.834614, 0.834614, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("1_0qec4")
theme_override_styles/focus = SubResource("StyleBoxEmpty_rmkpr")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_x8c71")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_54e63")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_yxjap")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_3cpu8")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_0kre7")
theme_override_styles/hover = SubResource("StyleBoxEmpty_ei7qu")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_ql74l")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_d2qmv")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_2pule")
theme_override_styles/normal = SubResource("StyleBoxEmpty_rvxff")
text = "Back"
flat = true

[node name="Quit" type="Button" parent="MarginContainer/VBoxContainer"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_type_variation = &"FlatButton"
theme_override_colors/font_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(0.834614, 0.834614, 0.834614, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("1_0qec4")
theme_override_styles/focus = SubResource("StyleBoxEmpty_rmkpr")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_x8c71")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_54e63")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_yxjap")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_3cpu8")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_0kre7")
theme_override_styles/hover = SubResource("StyleBoxEmpty_ei7qu")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_ql74l")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_d2qmv")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_2pule")
theme_override_styles/normal = SubResource("StyleBoxEmpty_rvxff")
text = "Quit"
flat = true

[connection signal="value_changed" from="MarginContainer/VBoxContainer/Volume/HBoxContainer/MarginContainer/SoundSlider" to="." method="_on_sound_slider_value_changed"]
[connection signal="button_down" from="MarginContainer/VBoxContainer/Back" to="." method="_on_back_button_down"]
[connection signal="button_down" from="MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_button_down"]
